--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "services:down": "docker compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "npm run services:up && concurrently --n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test": "npm run services:up && npm run wait-for-postgres && concurrently --n next,jest --hide next -k -s command-jest 'next dev' 'jest --runInBand'",
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create",
@@ -21,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "docker": "^1.0.0",
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
